<resources>
    <string name="app_name">Voyager</string>
    <string name="create">Where are you headed?</string>
    <string name="destination">Destination Name</string>
    <string name="arrival">Return Date</string>
    <string name="departure">Departure Date</string>
    <string name="event_name_format">%s</string>
    <string name="trip_detail_image">Trip</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="am6"> 6 AM </string>
    <string name="am7"> 7 AM </string>
    <string name="am8"> 8 AM </string>
    <string name="am9"> 9 AM </string>
    <string name="am10"> 10 AM </string>
    <string name="am11"> 11 AM </string>
    <string name="pm12"> 12 PM </string>
    <string name="pm1"> 1 PM </string>
    <string name="pm2"> 2 PM </string>
    <string name="pm3"> 3 PM </string>
    <string name="pm4"> 4 PM </string>
    <string name="pm5"> 5 PM </string>
    <string name="pm6"> 6 PM </string>
    <string name="pm7"> 7 PM </string>
    <string name="pm8"> 8 PM </string>
    <string name="pm9"> 9 PM </string>
    <string name="pm10"> 10 PM </string>
    <string name="pm11"> 11 PM </string>
    <string name="am12"> 12 AM </string>
    <string name="recommended_section_header"><b>Recommended For You</b></string>
    <string name="hot_right_now_header"><b>Hot Right Now</b></string>
    <string name="budget_section_header"><b>Budget Trips</b></string>
    <string name="destination_name_placeholder">Destination Name Placeholder</string>
    <string name="past_trips_section_header"><b>Created Trips</b></string>
    <string name="long_string">The central notion of a UIScrollView object
        (or, simply, a scroll view) is that it is a view whoseThe central notion of a UIScrollView
        object (or, simply, a scroll view) is that it is a view whoseThe central notion of a
        UIScrollView object (or, simply, a scroll view) is that it is a view whoseThe central notion
        of a UIScrollView object (or, simply, a scroll view) is that it is a view whoseThe central
        notion of a UIScrollView object (or, simply, a scroll view) is that it is a view whoseThe
        central notion of a UIScrollView object (or, simply, a scroll view) is that it is a view
        whose the central notion of a UIScrollView object (or, simply, a scroll view) is that it is
        a view whoseThe central notion of a UIScrollView object (or, simply, a scroll view) is that
        it is a view whoseThe central notion of a UIScrollView object (or, simply, a scroll view) is
        that it is a view whoseThe central notion of a UIScrollView object (or, simply, a scroll
        view) is that it is a view whose origin is adjustable over the content view. It clips the
        content to its frame, which generally (but not necessarily) coincides with that of the
        application’s main window. A scroll view tracks the movements of fingers and adjusts the
        origin accordingly. The view that is showing its content “through” the scroll view draws
        that portion of itself based on the new origin, which is pinned to an offset in the content
        view.</string>
    <string name="attraction_name_placeholder">attraction name placeholder</string>
    <string name="description_placeholder">description placeholder</string>
    <string name="est_time">Est time:</string>
    <string name="attraction_IMAGE">picture of attraction</string>
    <string name="schedule_attraction">Schedule Attraction</string>
</resources>
