<?xml version="1.0" encoding="utf-8"?>
<!-- player_row.xml -->
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardView"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:background="@color/iconBackgroundBlue"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:focusable="true">

    <LinearLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_margin="3dp">

        <ImageView
            android:id="@+id/picture"
            android:layout_width="125dp"
            android:layout_height="80dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/attraction_IMAGE"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>

        <!-- aspect fill -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="ExtraText">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/attraction_name_placeholder"/>
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_placeholder"
                android:ellipsize="end"
                android:maxLines="3"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/est"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/est_time"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$"
                    android:textAlignment="textEnd"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>