<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlTripDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.TripDetailsActivity">

    <!--Destination Photo Section-->
    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/contact_detail_image_height"
        android:contentDescription="@string/trip_detail_image"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:src="@drawable/greece_one" />

    <!--Trip Description Section-->
    <RelativeLayout
        android:id="@+id/rlInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivProfile">

        <!--THE TRIP'S INFORMATION CAN GO HERE-->
        <ScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/svTripDetailsDescription"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <!--The name + picture is already filled out in the layout which implements this file-->
                <!--Name of the Destination-->
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="10dp"
                    android:text="@string/destination_name_placeholder"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="?android:attr/listDivider" />

                <!--Price-->
                <TextView
                    android:id="@+id/tvBudget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Destination/Trip Name"/>

                <!--Number of possible guests-->
                <TextView
                    android:id="@+id/tvGuestNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="# of Guests"/>

                <!--Check-in View-->
                <TextView
                    android:id="@+id/tvCheckIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Check-In"/>

                <!--Check-out View-->
                <TextView
                    android:id="@+id/tvCheckOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Check-Out"/>

                <!--List of Events-->
                <TextView
                    android:id="@+id/tvAttractionName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Attractions ▼"/>

                <!--Possibly Rating View-->

                <View
                    android:id="@+id/tipsDivider"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="?android:attr/listDivider" />

                <!--Tips for this trip-->
                <TextView
                    android:id="@+id/tvTips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Tips"/>

                <TextView
                    android:id="@+id/tv_long"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:text="@string/long_string" >
                </TextView>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnAddTrip"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:adjustViewBounds="false"
            android:layout_margin="20dp"
            android:clickable="true"
            android:elevation="44dp"
            android:focusable="true"
            android:src="@drawable/plus" />

    </RelativeLayout>

</RelativeLayout>